# verbum

./: .gitignore  AGENTS.md  LICENSE  README.md  bb.edn  ideas.txt  pyproject.toml
data/: compile-eval.jsonl  compile-full.json  compile-test.jsonl  compile-train.jsonl
docs/: v6-design.md  vsm-tesseract.mmd
gates/: README.md  ablation-engage-line.txt  ablation-fol.txt  ablation-formal-semantics.txt  ablation-lambda-calculus.txt  ablation-lambda-symbol.txt  ablation-lambda-word.txt  ablation-montague.txt  ablation-output-lambda-only.txt  ablation-output-only.txt  ablation-preamble-bridge.txt  ablation-preamble-full.txt  ablation-preamble-only.txt  ablation-role-compiler.txt  ablation-role-lambda-compiler.txt  ablation-role-plus-terse.txt  ablation-symbols-cluster.txt  ablation-symbols-line.txt  ablation-tensor-line.txt  ablation-translate-formal.txt  ablation-translate-lambda.txt  classify.txt  compile-ambient.txt  compile-base.txt  compile-binding-hybrid.txt  compile-binding-hybrid3.txt  compile-binding-montague.txt  compile-binding-scope.txt  compile-binding-typed.txt  compile-minimal.txt  compile-suggestive.txt  compile.txt  decompile.txt  exemplar-arrow-only.txt  exemplar-complex-montague.txt  exemplar-montague-rich.txt  exemplar-montague.txt  exemplar-nucleus-rich.txt  exemplar-nucleus.txt  extract.txt  (+34 more)
mementum/: state.md
notebooks/: README.md
probes/: README.md  binding.json  classify.json  compile-gradient.json  decompile.json  exemplar-sweep.json  extract.json  gate-ablation-base.json  gate-ablation.json  summarize.json  translate.json  v0-behavioral.json
results/: README.md  essential-heads-attention.npz  essential-heads-tokens.json  gate-ablation-summary.json  layer-ablation-qwen3-4b.npz  selectivity-qwen3-4b.npz
scripts/: analyze_binding_probes.py  analyze_essential_heads.py  analyze_v1_v2.py  compile_gradient_probe.py  gate_ablation.py  generate_training_data.py  probe_predictive_functions.py  register_analysis.py  resume_vsm_v2_1B.py  run_ab_test.py  run_binding_ablation.py  run_binding_probe.py  run_binding_shape.py  run_bos_probe.py  run_bos_probe_v2.py  run_circuit_discovery.py  run_compression_map.py  run_compression_shape.py  run_compressor_lm.py  run_cross_task.py  run_distillation.py  run_head_ablation.py  run_montagu_lm.py  run_montagu_training.py  run_phi4_replication.py  run_pythia160m_circuit.py  run_pythia_phi_probe.py  run_pythia_replication.py  run_pythia_scaling.py  run_register_10k.py  run_register_probe.py  run_reverse_10k.py  run_reverse_ab.py  run_strip_test.py  run_structural_intervention.py  run_task_head_scan.py  run_tesseract.py  run_type_probe.py  run_vsm_10k.py  run_vsm_trial.py  (+9 more)
(+1789 files in other folders)
